--- a/src/styles.css
+++ b/src/styles.css
@@ -628,3 +628,29 @@ ngb-tabset>.nav-tabs {
 .display-4 {
   font-size: 2rem;
 }
+
+dl {
+  width: 100%;
+  overflow: hidden;
+  padding: 0;
+  margin-right: 0;
+}
+
+dt {
+  float: left;
+  width: 30%;
+  /* adjust the width; make sure the total of both is 100% */
+  padding: 0;
+  margin-left: 0;
+}
+
+dd {
+  float: left;
+  width: 50%;
+  padding: 0;
+  margin: 0;
+}
+
+tr {
+  cursor: pointer;
+}
