--- a/src/styles.css
+++ b/src/styles.css
@@ -628,3 +628,25 @@ ngb-tabset>.nav-tabs {
 .display-4 {
   font-size: 2rem;
 }
+
+.slidediv {
+  background-color: #ddd;
+  width: 400px;
+
+
+  overflow: hidden;
+
+  -webkit-transition: max-height 1.5s cubic-bezier(0, 1.05, 0, 1);
+  -moz-transition: max-height 1.5s cubic-bezier(0, 1.05, 0, 1);
+  transition: max-height 1.5s ease cubic-bezier(0, 1.05, 0, 1);
+
+  max-height: 38px;
+}
+
+div:hover {
+  -webkit-transition: max-height 2s ease;
+  -moz-transition: max-height 2s ease;
+  transition: max-height 2s ease;
+
+  max-height: 400px;
+}
