removed scrolling from changepassword text

--- a/src/app/pages/change-password/change-password.component.html
+++ b/src/app/pages/change-password/change-password.component.html
@@ -27,10 +27,8 @@
                     or emoji.
                   </small> -->
                   <blockquote class="card-bodyquote" style="">
-                    <div style="height: 50px; overflow-y: scroll;">
+                    <div>
                       Your password must be 8-20 characters long, contain letters and numbers, and must not contain
-                      spaces, special characters,
-                      or emoji.
                     </div>
                   </blockquote>
                   <div class="invalid-feedback">
