--- a/src/app/pages/released/released.component.html
+++ b/src/app/pages/released/released.component.html
@@ -46,7 +46,7 @@
             <td>{{item.store}}</td>
             <td>{{item.buying_price}}</td>
             <td>{{item.status}}</td>
-            <td>{{item.created_at | date}}</td>
+            <td>{{item.created_at | date: 'medium'}}</td>
 
           </tr>
         </tbody>
