--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -31,7 +31,6 @@
             <th>Delivery Option</th>
             <th>Store</th>
             <th>Status</th>
-            <th>Date Added</th>
             <th>Date Collected</th>
           </tr>
         </thead>
@@ -45,8 +44,8 @@
             <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
             <td>{{item.store}}</td>
             <td>{{item.status}}</td>
-            <td>{{item.created_at | date}}</td>
-            <td>{{item.updated_at | date}}</td>
+            <td>{{item.created_at | date: 'medium'}}</td>
+            <td>{{item.updated_at | date: 'medium'}}</td>
 
           </tr>
         </tbody>
