--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -137,7 +137,7 @@
               <th>Store</th>
               <th>Amount</th>
               <th>Pickup type</th>
-              <th>Date Added</th>
+              <th>Date of Sale</th>
             </tr>
           </thead>
           <tbody>
@@ -150,7 +150,7 @@
               <td>{{item.store}}</td>
               <td>{{item.buying_price}}</td>
               <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
-              <td>{{item.created_at | date}}</td>
+              <td>{{item.created_at | date: 'medium'}}</td>
 
             </tr>
 
@@ -182,7 +182,7 @@
               <th>Colected By</th>
               <th>Store</th>
               <th>Amount</th>
-              <th>Date Collected</th>
+              <th>Date of Sale</th>
             </tr>
           </thead>
           <tbody>
@@ -195,7 +195,7 @@
               <td>{{item.collected_by_name}} Id: {{item.collected_by_id_number}}</td>
               <td>{{item.store}}</td>
               <td>{{item.buying_price}}</td>
-              <td>{{item.created_at | date}}</td>
+              <td>{{item.created_at | date: 'medium'}}</td>
             </tr>
 
           </tbody>
