--- a/src/styles.css
+++ b/src/styles.css
@@ -655,3 +655,17 @@ dd {
 tr {
   cursor: pointer;
 }
+
+.slideup,
+.slidedown {
+  max-height: 0;
+  overflow-y: hidden;
+  -webkit-transition: max-height 0.8s ease-in-out;
+  -moz-transition: max-height 0.8s ease-in-out;
+  -o-transition: max-height 0.8s ease-in-out;
+  transition: max-height 0.8s ease-in-out;
+}
+
+.slidedown {
+  max-height: 500px;
+}
