--- a/src/app/pages/released/released.component.html
+++ b/src/app/pages/released/released.component.html
@@ -42,7 +42,7 @@
             <td>{{item.customer_id_number}}</td>
             <td>{{item.customer_phone_number}}</td>
             <td>{{item.item_description}}</td>
-            <td>{{(item.pick_up_type =='store_pickup')?'customer pick up':'lipalater pick up'}}</td>
+            <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
             <td>{{item.store}}</td>
             <td>{{item.buying_price}}</td>
             <td>{{item.status}}</td>
