added date range component on sales list-awaiting service addition

--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -2,12 +2,17 @@
   <div class="box box-primary">
     <div class="box-body">
       <div class="widget-controls row">
-        <div class="col-sm-6">
+        <div class="col-sm-4">
           <a class="btn btn-info btn-sm mb-1" (click)="downloadApps()"><i class="fa fa-refresh"></i> Update Sales
             List</a>
         </div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-4">
+        <div class="col-sm-2-pull-right">Select Date Range: </div>
+        <div class="col-sm-3"><input type="text" class="form-control" name="daterangeInput" daterangepicker
+            [options]="options" (selected)="selectedDate($event)" (cancelDaterangepicker)="calendarCanceled($event)"
+            (applyDaterangepicker)="calendarApplied($event)" />`
+        </div>
+        <div class="col-sm-3">
+
           <div class="input-group search-box">
             <input type="text" [(ngModel)]="searchKey" class="form-control search-input"
               placeholder="Search this content">
