--- a/src/app/pages/invoicing/view/view.component.html
+++ b/src/app/pages/invoicing/view/view.component.html
@@ -21,7 +21,6 @@
                   <th>Item Description</th>
                   <th>Total Price</th>
                   <th>Date Created</th>
-                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -35,18 +34,23 @@
                   <td>{{item.item_description}}</td>
                   <td>{{item.total_price}}</td>
                   <td>{{item.created_at | date: 'medium'}}</td>
-                  <td>
-                    <div class="float-right"> <button type="button" class="btn btn-xs btn-danger" (click)="onDelete()"
-                        title="Delete invoice entry" style="margin-right: 5px"> <i class="fa fa-cross"></i>
-                        Delete</button>
-                    </div>
-                  </td>
+
 
                 </tr>
 
               </tbody>
             </table>
 
+
+          </div>
+
+          <div class="row">
+            <div class="col-sm-10">
+
+            </div>
+            <div class="col-sm-2">
+
+            </div>
 
           </div>
 
