--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -2,15 +2,36 @@
   <div class="box box-primary">
     <div class="box-body">
       <div class="widget-controls row">
-        <div class="col-sm-4">
+        <div class="col-sm-5">
           <a class="btn btn-info btn-sm mb-1" (click)="downloadApps()"><i class="fa fa-refresh"></i> Update Sales
             List</a>
         </div>
-        <div class="col-sm-2-pull-right">Select Date Range: </div>
-        <div class="col-sm-3"><input type="text" class="form-control" name="daterangeInput" daterangepicker
-            [options]="options" (selected)="selectedDate($event)" (cancelDaterangepicker)="calendarCanceled($event)"
-            (applyDaterangepicker)="calendarApplied($event)" />`
+        <div class="col-sm-2">
+          <div class="form-group row">
+            <label class="col-sm-2">From:</label>
+            <div class="input-group col-sm-10">
+              <input class="form-control" placeholder="yyyy-mm-dd" name="dps" [(ngModel)]="startdate" ngbDatepicker
+                #ds="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="ds.toggle()" type="button"><i
+                    class="fa fa-calender"></i></button>
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="col-sm-2">
+          <div class="form-group row">
+            <label class="col-sm-2">To:</label>
+            <div class="input-group col-sm-10">
+              <input class="form-control" placeholder="yyyy-mm-dd" name="dpe" [(ngModel)]="enddate" ngbDatepicker
+                #de="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="de.toggle()" type="button"></button>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-sm-3">
 
           <div class="input-group search-box">
