several small changes on UI naming, links and form inputs

--- a/src/app/pages/internal-users/lipalater-users.component.html
+++ b/src/app/pages/internal-users/lipalater-users.component.html
@@ -31,7 +31,7 @@
             <th>Name</th>
             <th>Email</th>
             <th>Mobile</th>
-            <th>IdNumber</th>
+            <!-- <th>IdNumber</th> -->
             <th>Store</th>
             <th>Roles</th>
             <th>Status</th>
@@ -44,7 +44,7 @@
             <td>{{item.firstname}} {{item.lastname}}</td>
             <td>{{item.email}}</td>
             <td>{{item.mobile}}</td>
-            <td>{{item.id_number}}</td>
+            <!-- <td>{{item.id_number}}</td> -->
             <td>{{item.store.name}}</td>
             <td>{{item.role}}</td>
             <td>{{(item.active_status)?'Active':'Inactive'}}</td>
