added logic to intiate an action for downloading sales

--- a/src/app/pages/released/released.component.html
+++ b/src/app/pages/released/released.component.html
@@ -3,7 +3,7 @@
     <div class="box-body">
 
       <div class="widget-controls row">
-        <div class="col-sm-5">
+        <div class="col-sm-4">
           All Items Picked from Store
         </div>
         <div class="col-sm-2">
@@ -41,6 +41,13 @@
                 <i class="fa fa-search"></i>
               </button>
             </div>
+          </div>
+        </div>
+        <div class="col-sm-1">
+          <div class="input-group-append">
+            <button class="btn btn-info" type="button" (click)="download()">
+              <i class="fa fa-download"></i>
+            </button>
           </div>
         </div>
       </div>
