--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -2,7 +2,7 @@
   <div class="box box-primary">
     <div class="box-body">
       <div class="widget-controls row">
-        <div class="col-sm-5">
+        <div class="col-sm-4">
           <a class="btn btn-info btn-sm mb-1" (click)="downloadApps()"><i class="fa fa-refresh"></i> Update Sales
             List</a>
         </div>
@@ -45,6 +45,19 @@
             </div>
           </div>
         </div>
+
+        <div class="col-sm-1">
+          <div class="input-group-append">
+            <button class="btn btn-info" type="button" (click)="download()">
+              <i class="fa fa-download"></i>
+            </button>
+          </div>
+        </div>
+
+
+
+
+
       </div>
       <span id="responseText"></span>
       <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
