adde date collected to sales list

--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -71,6 +71,7 @@
             <th>Delivery Option</th>
             <th>Store</th>
             <th>Status</th>
+            <th>Date Added</th>
             <th>Date Collected</th>
           </tr>
         </thead>
@@ -85,7 +86,7 @@
             <td>{{item.store}}</td>
             <td>{{item.status}}</td>
             <td>{{item.created_at | date: 'medium'}}</td>
-            <td>{{item.updated_at | date: 'medium'}}</td>
+            <td>{{item.collected_at | date: 'medium'}}</td>
 
           </tr>
         </tbody>
