updated text on the UI to make it more informative

--- a/src/app/pages/collections/create/pickup.component.html
+++ b/src/app/pages/collections/create/pickup.component.html
@@ -103,7 +103,7 @@
                         <td>{{item.store}}</td>
                         <td>{{item.created_at | date}}</td>
                         <td>{{item.status}}</td>
-                        <td> <input id="{{item.id}}" (mouseout)="itemCodeValues($event)" placeholder="Item Code"
+                        <td> <input id="{{item.id}}" (mouseout)="itemCodeValues($event)" placeholder="Item Code (IMEI)"
                             type="text"></td>
 
                         <!--[readonly]="isCodeReadOnly()"-->
